# gene-expression-visuals

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  pip_list.txt  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: streamlit_app.py
data/processed/: airway_differential_expression.csv  airway_metadata.csv
docs/: case-study.md
notebooks/: README.md
scripts/: prepare_airway_subset.py
src/gene_expression_visuals/: __init__.py  analysis.py  data_loader.py  ml.py  visualization.py
src/gene_expression_visuals.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_pipeline.py
