[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gene-expression-visuals"
version = "0.1.0"
description = "Interactive RNA-seq visualization portfolio project"
authors = [{ name = "Soheil Karami" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "scikit-learn>=1.3",
  "scipy>=1.11",
  "statsmodels>=0.14",
  "plotly>=5.20",
  "streamlit>=1.38",
  "pyarrow>=14.0",
  "rich>=13.7",
  "pyyaml>=6.0"
]

[project.urls]
homepage = "https://www.upwork.com/freelancers/~01d6937d79b7130bb7"
repository = "https://github.com/soheilkarami/gene-expression-visuals"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 90
target-version = "py310"
select = ["E", "F", "I", "B", "UP", "S", "TID"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["gene_expression_visuals"]

[tool.black]
line-length = 90
target-version = ["py310"]

[tool.pytest.ini_options]
minversion = "7.4"
addopts = "-q"
testpaths = ["tests"]

[tool.pyright]
venvPath = "."
venv = ".venv"
extraPaths = ["src"]

